--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -35,6 +35,11 @@
   padding: 0;
 }
 
+.mealsLoading {
+  text-align: center;
+  color: white;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
